--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "bin": {
     "test-repl": "index.js"
   },
+  "scripts": {
+    "test": "mocha --compilers js:babel-core/register --require babel-polyfill test/**.test.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/harrysarson/test-repl.git"
@@ -21,5 +24,17 @@
     "find-up": "^2.1.0",
     "repl.history": "^0.1.4",
     "resolve": "^1.4.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "chai": "^4.1.1",
+    "mocha": "^3.5.0",
+    "tmp-promise": "^1.0.3"
+  },
+  "babel": {
+    "presets": "env",
+    "ignore": "test/resources/**"
   }
 }
